fixed "aggressive line wrapping" in list items. addresses issue 131 https://github.com/ansible/lightbulb/issues/131

--- a/decks/css/theme/ansible.css
+++ b/decks/css/theme/ansible.css
@@ -118,7 +118,7 @@ mark span.hljs-string{
 .reveal ol,
 .reveal dl,
 .reveal ul {
-  display: inline-block;
+  /*display: inline-block;*/
   text-align: left;
   margin: 0 0 0 1em; }
   
